# dev

./: .gitignore  README.md  buildAll.mjs  buildExamples.mjs  dev.mjs  examples.mjs  package-lock.json  package.json  watch.mjs
examples/live/: debug.html  examples.json  index.html  source.html  stats.html  view.html
examples/src/: tsconfig.json
examples/wip/: flat world test.ts  index-bundle.ts  overlap bounds.ts  world transform stats.ts
phaser4examplebuild/: README.md
public/: examples.json  index.html  index.js  index.js.map  index.min.js  index.min.js.map  pcui.js  runner.js  view.html
public/3d/: primitives.js  primitives.js.map  primitives.min.js
public/_libs/: decodeURI.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.min.css  launcher.js  loadJSON.js  runner.js
public/assets/: atlas-notrim.json  cartoon-items.json
public/container/: add children.js  add children.js.map  add children.min.js
public/layer/: effect layer.js  effect layer.js.map  effect layer.min.js
public/libs/: launcher.js  loadFile.js  runner.js  viewsource.js
public/sprite/: bounds test 1.js  bounds test 1.js.map  bounds test 1.min.js  create sprite.js  create sprite.js.map  sprite from bundle.js  sprite from bundle.js.map  sprite from bundle.min.js  sprite from package.js  sprite from package.js.map  sprite from package.min.js  sprite from src.js  sprite from src.js.map  sprite from src.min.js
rustwasm/: Cargo.toml  LICENSE  README.md
rustwasm/pkg/: rustwasm.d.ts  rustwasm.js  rustwasm_bg.wasm  rustwasm_bg.wasm.d.ts
rustwasm/src/: lib.rs  matrix2d-single.rs  mem.rs  test.rs
src/: index-src.ts  index.ts  materials.ts  primitives2.ts  simple quad.ts
src/3d/: primitives.ts
src/container/: add children.ts
src/sprite/: create sprite.ts  sprite from bundle.ts  sprite from package.ts  sprite from src.ts
wip/: bounds test 1.ts  obj model.ts
(+611 files in other folders)
