[package]
name = "phaser4"
version = "0.1.0"
edition = "2018"
description = "Phaser 4"
license = "MIT"
repository = "https://github.com/phaserjs/dev"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.75"
#js-sys = "0.3.52"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }
